# ztl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .project-history-dir  LICENSE.md  README.md  meson.build
.github/workflows/: build.yml
docs/adr/: 0001-record-architecture-decisions.md
docs/meta/type_trait/: is_base_of.md
docs/tuple/: tuple.md
include/ztl/: types.hpp
include/ztl/iterator/: iterator_tag.hpp
include/ztl/iterator/detail/: iterator_tag_stl.hpp  iterator_tag_ztl.hpp
include/ztl/meta/: sequence.hpp
include/ztl/meta/concept/: integral.hpp
include/ztl/meta/constant/: bool_constant.hpp  integral_constant.hpp
include/ztl/meta/sequence/: base.hpp  empty.hpp  push_back.hpp  push_front.hpp  size.hpp
include/ztl/meta/type_trait/: has_unique_object_representations.hpp  is_base_of.hpp  is_class.hpp  is_constructible.hpp  is_integral.hpp  is_reference.hpp  is_same.hpp  is_union.hpp  remove_all_extents.hpp  remove_cv.hpp  remove_reference.hpp
include/ztl/meta/utility/: index_sequence.hpp  integer_sequence.hpp
include/ztl/numeric/: ratio.hpp
include/ztl/numeric/detail/: safe_add.hpp  safe_multiply.hpp  safe_substract.hpp
include/ztl/numeric/ratio/: defines.hpp  ratio.hpp  ratio_add.hpp  ratio_divide.hpp  ratio_equal.hpp  ratio_greater.hpp  ratio_less.hpp  ratio_multiply.hpp  ratio_subtract.hpp
include/ztl/platform/: cpp_std.hpp
include/ztl/tuple/: tuple.hpp  tuple_base.hpp  tuple_element.hpp  tuple_get.hpp  tuple_size.hpp
include/ztl/tuple/detail/: is_tuple.hpp  tuple_concept.hpp  tuple_element.hpp  tuple_element_map.hpp
include/ztl/type/: byte.hpp  stddef.hpp  stdint.hpp
include/ztl/utility/: addressof.hpp  endian.hpp  forward.hpp  macros.hpp  move.hpp  source_location.hpp
include/ztl/utility/endian/: byteswap.hpp  (+2 more)
subprojects/: unittest-cpp.wrap
tests/: meson.build
tests/libs/: README.md  meson.build
tests/unit_tests/: main.cpp  meson.build  test_framework.hpp
tests/unit_tests/meta/constant/: bool_constant_test.cpp  integral_constant_test.cpp
tests/unit_tests/meta/sequence/: push_back_test.cpp  push_front_test.cpp
tests/unit_tests/meta/type_trait/: is_base_of_test.cpp  is_class_test.cpp  is_constructible_test.cpp  is_integral_test.cpp  is_reference_test.cpp  is_same_test.cpp  is_union_test.cpp  remove_cv_test.cpp  remove_reference_test.cpp
tests/unit_tests/meta/utility/: index_sequence_test.cpp  integer_sequence_test.cpp
tests/unit_tests/numeric/: ratio_test.cpp
tests/unit_tests/tuple/: is_tuple_test.cpp  tuple_test.cpp
tests/unit_tests/type/: byte_test.cpp
tests/unit_tests/utility/: forward_test.cpp  move_test.cpp  source_location_test.cpp
tests/unit_tests/utility/endian/: byteswap_test.cpp  endian_swap_test.cpp
tests/unittests/: main.cpp  meson.build
tools/: build_all.sh
(+13 files in other folders)
